--- a/app/index.html
+++ b/app/index.html
@@ -190,7 +190,7 @@
     </section>
 
 
-    <section class="product">
+    <section class="product indent">
       <div class="container">
         <h2 class="title product__title">Топовые товары</h2>
 
@@ -272,8 +272,8 @@
                   </p>
                 </div>
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -312,8 +312,8 @@
                   </p>
                 </div>
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -357,8 +357,8 @@
                   </p>
                 </div>
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -391,8 +391,8 @@
                   </p>
                 </div>
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -436,8 +436,8 @@
                 </div>
 
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -484,8 +484,8 @@
                   </p>
                 </div>
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -528,8 +528,8 @@
                   </p>
                 </div>
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -573,8 +573,8 @@
                 </div>
 
                 <button class="product-item__cart" type="button">
-                  <svg width="32" height="32">
-                    <use xlink:href="images/sprite.svg#icon-cart-product" width="32" height="32"></use>
+                  <svg width="16" height="16">
+                    <use xlink:href="images/sprite.svg#icon-cart-product"></use>
                   </svg>
                 </button>
               </div>
@@ -585,46 +585,46 @@
       </div>
     </section>
 
-    <div class="top-product">
+    <section class="top-product indent-bottom ">
       <h2 class="sr-only">Топовые товары</h2>
       <div class="container">
-        <div class="top-product__inner">
+        <ul class="top-product__inner">
 
-          <div class="top-product__item top-product__item--group1"
+          <li class="top-product__item top-product__item--width top-product__item--white"
             style="background-image: url('images/top-product/group1.jpg');">
             <div class="top-product__subtitle">свежайшие фрукты</div>
-            <h2 class="top-product__title top-product__title--shadow">
-              начни фруктовое лето
+            <h3 class="top-product__title">
+              начни фруктовое лето<br>
               всего от 99 ₽
-            </h2>
-            <a class="top-product__link top-product__link--group1" href="#">перейти к покупкам</a>
-          </div>
+            </h3>
+            <a class="top-product__link" href="#">перейти к покупкам</a>
+          </li>
 
-          <div class="top-product__item top-product__item--group2"
+          <li class="top-product__item top-product__item--group2"
             style="background-image: url('images/top-product/group2.jpg');">
             <div class="top-product__subtitle">сезонная распродажа</div>
-            <h2 class="top-product__title top-product__title--wight2">
-              овощепад
+            <h3 class="top-product__title">
+              овощепад<br>
               до -50%
-            </h2>
+            </h3>
             <a class="top-product__link" href="#">перейти к покупкам</a>
-          </div>
+          </li>
 
-          <div class="top-product__item" style="background-image: url('images/top-product/group3.jpg');">
+          <li class="top-product__item" style="background-image: url('images/top-product/group3.jpg');">
             <div class="top-product__subtitle">ням-ням</div>
-            <h2 class="top-product__title">
-              свежий
+            <h3 class="top-product__title">
+              свежий<br>
               хлебчик
-            </h2>
+            </h3>
             <a class="top-product__link" href="#">перейти к покупкам</a>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
-    </div>
-  
-    <section class="promotions">
+    </section>
+
+    <section class="promotions indent">
       <div class="container">
-        <h2 class="title">Акции</h2>
+        <h2 class="title promotions__title">Акции</h2>
         <div data-ref="container-2">
 
           <ul class="promotions__list mixer">
@@ -647,7 +647,7 @@
             </li>
           </ul>
 
-          <div class="promotions__items">
+          <div class="product__items promotions__items ">
 
             <article class="product-item mix category-news product-item--mini">
               <div class="product-item__top">
@@ -664,8 +664,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/pineapple.jpg" width="100" height="100"
-                  alt="ананас">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/pineapple.jpg" width="100" height="100"
+                    alt="ананас">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Ананас, 1 кг
@@ -705,8 +708,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/coffee.jpg" width="100" height="100"
-                  alt="коффе">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/coffee.jpg" width="100" height="100"
+                    alt="коффе">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Кофе с коноплей органический Caffé Salomoni 250г
@@ -746,8 +752,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/strawberry.jpg" width="100" height="100"
-                  alt="клубника">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/strawberry.jpg" width="100" height="100"
+                    alt="клубника">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Клубника, 1 кг
@@ -787,8 +796,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/mango.jpg" width="100" height="100"
-                  alt="манго">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/mango.jpg" width="100" height="100"
+                    alt="манго">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Манго, 1 шт
@@ -828,8 +840,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/salmon.jpg" width="100" height="100"
-                  alt="лосось">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/salmon.jpg" width="100" height="100"
+                    alt="лосось">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Лосось, 1 кг
@@ -869,8 +884,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/veg_juice.jpg" width="100" height="100"
-                  alt="Сок Granini овощной">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/veg_juice.jpg" width="100" height="100"
+                    alt="Сок Granini овощной">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Сок Granini овощной 100%, 0.5л
@@ -910,8 +928,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/basket.jpg" width="100" height="100"
-                  alt="Фруктовая корзина">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/basket.jpg" width="100" height="100"
+                    alt="Фруктовая корзина">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Фруктовая корзина, 1 шт
@@ -951,8 +972,11 @@
                 </button>
               </div>
               <div class="product-item__img-box">
-                <img class="product-item__images" src="images/promotions/pork.jpg" width="100" height="100"
-                  alt="Свинина мякоть">
+                <a class="product-item__img-link" href="#">
+                  <img class="product-item__images" src="images/promotions/pork.jpg" width="100" height="100"
+                    alt="Свинина мякоть">
+                </a>
+
               </div>
               <h3 class="product-item__title">
                 Свинина мякоть, 1 кг
@@ -982,46 +1006,47 @@
       </div>
     </section>
 
-    <div class="partners">
+    <section class="partners">
+      <h2 class="sr-only">Партнеры</h2>
       <div class="container">
 
         <ul class="partners__list">
           <li class="partners__item">
-            <img class="partners__img" src="images/partners/sprite.png" alt="sprite">
+            <img class="partners__img" src="images/partners/sprite.png" width="80" alt="sprite">
           </li>
 
           <li class="partners__item">
-            <img class="partners__img" src="images/partners/dr-pepper.png" alt="dr-pepper">
+            <img class="partners__img" src="images/partners/dr-pepper.png" width="80" alt="dr-pepper">
           </li>
 
           <li class="partners__item">
-            <img class="partners__img" src="images/partners/coca-cola.png" alt="coca-cola">
+            <img class="partners__img" src="images/partners/coca-cola.png" width="80" alt="coca-cola">
           </li>
 
           <li class="partners__item">
-            <img class="partners__img" src="images/partners/pepsi.png" alt="pepsi">
+            <img class="partners__img" src="images/partners/pepsi.png" width="80" alt="pepsi">
           </li>
 
           <li class="partners__item">
-            <img class="partners__img" src="images/partners/redbull.png" alt="redbull">
+            <img class="partners__img" src="images/partners/redbull.png" width="80" alt="redbull">
           </li>
 
           <li class="partners__item">
-            <img class="partners__img" src="images/partners/fanta.png" alt="fanta">
+            <img class="partners__img" src="images/partners/fanta.png" width="80" alt="fanta">
           </li>
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div class="news">
+    <section class="news indent-bottom ">
       <div class="container">
-        <div class="news__wrapper">
+        <div class="news__top">
           <h2 class="title news__title">наши новости</h2>
           <a class="news__all" href="#">все новости</a>
         </div>
 
         <div class="news__items">
-          <a class="news__item">
+          <a class="news__item" href="#">
             <div class="news__inner">
               <img class="news__img" src="images/news/news-1.jpg" alt="клубника" width="410" height="238">
               <div class="news__date">
@@ -1035,7 +1060,7 @@
             </p>
           </a>
 
-          <a class="news__item">
+          <a class="news__item" href="#">
             <div class="news__inner">
               <img class="news__img" src="images/news/news-2.jpg" alt="манго" width="410" height="238">
             </div>
@@ -1048,7 +1073,7 @@
             </p>
           </a>
 
-          <a class="news__item">
+          <a class="news__item" href="#">
             <div class="news__inner">
               <img class="news__img" src="images/news/news-3.jpg" alt="папая" width="410" height="238">
             </div>
@@ -1062,7 +1087,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </section>
   </main>
 
 
@@ -1086,28 +1111,44 @@
         <ul class="footer-top__list">
 
           <li class="footer-top__list-item">
-            <a class="footer-top__link link-white " href="#">О нас</a>
+            <a class="footer-top__link link-white" href="#">
+              О нас
+            </a>
           </li>
           <li class="footer-top__list-item">
-            <a class="footer-top__link link-white " href="#">Контакты</a>
+            <a class="footer-top__link link-white" href="#">
+              Контакты
+            </a>
           </li>
           <li class="footer-top__list-item">
-            <a class="footer-top__link link-white " href="#">Публичная оферта</a>
+            <a class="footer-top__link link-white" href="#">
+              Публичная оферта
+            </a>
           </li>
           <li class="footer-top__list-item footer-top__list-item--2">
-            <a class="footer-top__link link-white " href="#">Оплата и доставка</a>
+            <a class="footer-top__link link-white" href="#">
+              Оплата и доставка
+            </a>
           </li>
           <li class="footer-top__list-item footer-top__list-item--2">
-            <a class="footer-top__link link-white " href="#">Вакансии</a>
+            <a class="footer-top__link link-white" href="#">
+              Вакансии
+            </a>
           </li>
           <li class="footer-top__list-item footer-top__list-item--2">
-            <a class="footer-top__link link-white " href="#">Акции</a>
+            <a class="footer-top__link link-white" href="#">
+              Акции
+            </a>
           </li>
           <li class="footer-top__list-item footer-top__list-item--3">
-            <a class="footer-top__link link-white " href="#">Отзывы</a>
+            <a class="footer-top__link link-white" href="#">
+              Отзывы
+            </a>
           </li>
           <li class="footer-top__list-item footer-top__list-item--3">
-            <a class="footer-top__link link-white " href="#">Новости</a>
+            <a class="footer-top__link link-white" href="#">
+              Новости
+            </a>
           </li>
         </ul>
 
@@ -1154,12 +1195,11 @@
               </a>
             </li>
           </ul>
+
         </div>
       </div>
-    </div>
 
-    <div class="footer-bottom">
-      <div class="container">
+      <div class="footer-bottom">
         <div class="footer-bottom__wrap">
           <p class="footer-bottom__text">© 2021 фрешок</p>
           <div class="footer-bottom__img ">
@@ -1168,7 +1208,6 @@
           </div>
         </div>
       </div>
-    </div>
   </footer>
 
 
